1. Fixed the problem that the scrollbar will show up temporarily when the pop-up is up.

--- a/src/assets/scss/components/_container.scss
+++ b/src/assets/scss/components/_container.scss
@@ -182,4 +182,8 @@
 	&.container-no-left-margin {
 		margin-left: 0;
 	}
+
+	&.container-overflow-hidden {
+		overflow: hidden;
+	}
 }
